<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GastosFragment">


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingRight="40dp"
        android:paddingLeft="40dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ctDescriaco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/til_descricao" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edCategoria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edCategoria"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edDataHora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edDataHora"
               />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edValor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edValor"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_login_button"
            android:text="@string/btnCadastrar"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>