<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/home"
    android:background="@drawable/round_login_botton"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            app:title="@string/app_name"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:titleTextColor="@color/colorWhite"
            app:navigationIcon="@drawable/ic_arrow_back"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/FragmentMainId"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/round_botton_white_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp">

        <Button
            android:textAllCaps="false"
            android:id="@+id/ButtonHomeId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:textSize="8pt"
            android:shadowDy="1"
            android:shadowRadius="0"
            android:text="@string/home"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/ButtonEntradaId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="8pt"
            android:shadowRadius="0"
            android:text="@string/entradas"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:typeface="normal" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/ButtonGastosId"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="sans-serif"
            android:shadowColor="#000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:textSize="8pt"
            android:shadowRadius="0"
            android:text="@string/gastos"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:typeface="normal" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/flFragDetails"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/FragmentMainId" />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="16dp" >

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>